code was cleaned